# libhybris

./: .gitignore  CMakeLists.txt  README.md  hooks.c  hooks_shm.c  lisezmoi-fr.md  readme-en.md
include/linker/: linker_globals.h
linker/: dlfcn.cpp  linker.cpp  linker_main.cpp  linker_soinfo.cpp
linker/bionic/libc/async_safe/: CHECK.h
